# blots-lang

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  PUBLISHING.md  README.md  TEST_SUMMARY.md  WORKSPACE.md  bench.numpad  bench2.numpad  bench3.numpad  bench4.numpad  bench5.numpad  benchmark-pattern.blot  clear_test_output.js  complex-test.blot  complex_with_test.blot  comprehensive_test.blot  current-version.json  debug_source_map  debug_source_map.rs  dist-workspace.toml  justfile  newline.blots  package.json  release.sh  simple-test.blot  simple-test2.blot  test.blot  test_defined.blot  test_dot_access.blot  test_each_ops.blot  test_full_workflow.js  test_inline_eval.js  test_inputs.blot  test_inputs_simple.blot  test_output_value.blot  test_uppercase.blot  test_uppercase_clean.blot  (+1 more)
.cargo/: config.toml
.claude/: settings.local.json
.config/: nextest.toml
.github/workflows/: build-and-publish.yml  publish-wasm.yml  release-cli.yml  release.yml  tests.yml
benches/: bench.blots  bench10.blots  bench11.blots  bench12.blots  bench6.blots  bench7.blots  bench8.blots  bench9.blots
blots/: Cargo.toml  README.md  test_runtime_error_recovery.sh
blots-core/: Cargo.toml  README.md
blots-core/src/: ast.rs  ast_to_source.rs  do_block_tests.rs  environment.rs  error.rs  error_mapper.js  expressions.rs  formatter.rs  functions.rs  grammar.pest  heap.rs  intern.rs  lib.rs  parser.rs  precedence.rs  runtime.js  source_map.rs  stats.rs  tests.rs  transpiler.rs  units.rs  values.rs
blots-wasm/: Cargo.toml  README.md  asdf.blot  clear_precedence_test.blot  simple_with_test.blot  test_addition.js  test_original_source.js  test_simple.js  test_with_precedence.blot
blots-wasm/src/: error_tests.rs  lib.rs  tests.rs  wasm_tests.rs
blots/src/: cli.rs  commands.rs  highlighter.rs  main.rs
blots/tests/: cli_flags.rs  test_function_input_deserialization.rs  test_function_input_references.rs  test_function_output_closures.rs  test_lambda_parameter_isolation.rs  test_output_validation.rs
cli/: Cargo.toml
cli/src/: commands.rs  main.rs
core/: Cargo.toml
core/src/: expressions.rs  functions.rs  lib.rs  math.pest  parser.rs
examples/: bench.blot  bench.numpad  bench2.blot  bench3.blot  bench4.blot  bench5.blot  bench_small.blot  bench_small.blots  compound_interest.blots  demo.blot  demo.blots  dot_operators_demo.blots
mir_core/: Cargo.toml
mir_core/src/: expressions.rs  functions.rs  lib.rs  math.pest  parser.rs  values.rs
numpad/: Cargo.toml
numpad-core/src/: expressions.rs  functions.rs  grammar.pest  heap.rs  lib.rs  parser.rs  values.rs
numpad-wasm/: Cargo.toml
numpad-wasm/src/: lib.rs
numpad/src/: main.rs
numpad_core/: Cargo.toml
numpad_core/src/: functions.rs  math.pest
numpad_wasm/: Cargo.toml
scripts/: check_unit_conversions.py  time_mem.sh  time_mem_summary.sh
src/: commands.rs  evaluator.rs  expressions.rs  format.rs  main.rs  math.pest  parser.rs
tests/: README.md  blank_lines_test.blot  comment_test.blots  compound_interest.blot  compound_interest_clean.blot  compound_interest_clean.blots  compound_interest_do.blot  compound_interest_do.blots  compound_interest_original.blot  compound_interest_original.blots  compound_no_blanks.blot  compound_no_blanks.blots  comprehensive_format_test.blot  debug_comma.blot  do_with_blanks.blot  formatter_complex_test.blot  formatter_edge_cases.blot  formatter_edge_cases.blots  formatter_test.blot  indented_comments.blot  lambda_record_test.blots  long_lines_test.blot  multi_line_break_test.blots  simple_comment.blots  simple_do_block.blot  simple_tests.blot  simple_with_comments.blot  test_empty_record.blot  test_indent.blots  test_source_mapping.blot  test_spread.blot  trace_test.blots
tests/debug/: debug_each.blot  debug_with.blot
tests/language-features/: benchmark-pattern.blot  complex-each-with.blot  complex_list_with.blot  complex_with_test.blot  comprehensive_test.blot  each-with-test.blot  simple_test.blot  test_each_add.blot  test_each_simple.blot  test_list_add.blot  test_list_operations.blot  test_list_operations.blots  test_list_operations_simple.blots  test_list_with.blot  test_list_with.blots  test_old_functions.blots  test_postfix.blots  test_pratt.blot  test_pratt.blots
tests/transpiler/: builtin-test.blot  builtin-test.js  complex-test.blot  debug-access.blot  inline-test.blot  inline-test.js  order-of-operations-test.blot  output-test.blot  simple-debug.blot  standalone-test.blot  standalone-test.js  test_inputs_mock.blot  test_inputs_proper.js  test_output.js  test_output_inline.blot
wasm/: Cargo.toml
wasm/src/: lib.rs  log.rs
website/: astro.config.mjs  package.json  wrangler.jsonc
website/src/components/: Code.astro  CopyBox.astro  Head.astro  Layout.astro  Link.astro  SectionHeading.astro
website/src/pages/: 404.astro  index.astro
website/src/styles/: global.css
