[workspace]
members = [
  "blots-core",
  "blots",
  "blots-wasm",
]
resolver = "2"
rust-version = "1.89"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
