[workspace]
members = [
  "blots-core",
  "blots",
  "blots-wasm",
]
resolver = "2"

[workspace.package]
rust-version = "1.89"
version = "0.4.7"
authors = ["Paul Russo <paul@paulrusso.me>"]
edition = "2024"
repository = "https://github.com/paul-russo/blots-lang"
homepage = "https://github.com/paul-russo/blots-lang"
license = "MIT"

[workspace.dependencies]
# Internal crates - these will use path during development, version during publishing
blots-core = { path = "blots-core", version = "0.4.3" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
