[package]
edition = "2024"
name = "blots-core"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
base64 = "0.21"
dyn-fmt = "0.4.3"
indexmap = { version = "2.0", features = ["serde"] }
pest = "2.4.0"
pest_derive = "2.4.0"
regex = "1.10.2"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0"
