[package]
name = "blots-core"
description = "Core library for Blots, a small, simple, expression-oriented programming language."
readme = 'README.md'

# Inherit common fields from workspace
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
license.workspace = true


[dependencies]
anyhow = "1.0.86"
base64 = "0.21"
dyn-fmt = "0.4.3"
indexmap = { version = "2.0", features = ["serde"] }
pest = "2.4.0"
pest_derive = "2.4.0"
regex = "1.10.2"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0"
