[package]
name = "blots-wasm"
version = "0.1.1"
edition = "2021"
authors = [ "Paul Russo <paul@paulrusso.me>" ]

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
blots-core = { path = "../blots-core" }
serde = { version = "1.0.209", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.93"
anyhow = "1.0.86"
regex = "1.10.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# https://github.com/rustwasm/wasm-pack/issues/1351
[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
