[package]
name = "blots-wasm"
description = "WebAssembly bindings for Blots, a small, simple, expression-oriented programming language."
readme = 'README.md'
license-file = "LICENSE"
# Inherit common fields from workspace
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
blots-core.workspace = true
indexmap = { version = "2.0", features = ["serde"] }
serde = { version = "1.0.209", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.93"
anyhow = "1.0.86"
regex = "1.10.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# https://github.com/rustwasm/wasm-pack/issues/1351
[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
