[package]
edition = "2024"
name = "blots"
version = "0.3.0"
repository = "https://github.com/paul-russo/blots-lang"
description = "A small expression-oriented programming language."
homepage = "https://github.com/paul-russo/blots-lang"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.21", features = ["derive"] }
blots-core = { path = "../blots-core" }
indexmap = { version = "2.2", features = ["serde"] }
rustyline = "14.0"
regex = "1.10"
serde_json = "1.0"
yansi = "1.0"

[dev-dependencies]
tempfile = "3.8"
