[package]
name = "blots"
description = "A small, simple, expression-oriented programming language."
readme = 'README.md'
# Inherit common fields from workspace
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.21", features = ["derive"] }
blots-core.workspace = true
indexmap = { version = "2.2", features = ["serde"] }
rustyline = "14.0"
regex = "1.10"
serde_json = "1.0"
yansi = "1.0"

[dev-dependencies]
tempfile = "3.8"
