[package]
name = "numpad-wasm"
version = "0.1.0"
edition = "2021"
authors = [ "Paul Russo <paul@paulrusso.me>" ]

[lib]
crate-type = ["cdylib"]

[dependencies]
numpad-core = { path = "../numpad-core" }
serde = { version = "1.0.209", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.93"
anyhow = "1.0.86"
